Fix the transparent dropdowns on the header
The background was set to a z-index that was too low, allowing elements
in the hero to show through. Turns out it was only when the header was
not "sticky'd" to the top of the browser window.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,10 @@
   height: 50px;
 }
 
+.navigation-bar-header {
+  z-index: 9;
+}
+
 .navigation-spacing {
   padding-top: 50px;
 }
